<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    android:paddingHorizontal="32sp"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32sp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/username"
            android:textColor="@color/text_primary"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/app_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:background="@drawable/rounded_view"
            android:orientation="vertical"
            android:paddingVertical="16sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/primary_title"
                android:textAlignment="center"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="16sp"
                android:contentDescription="@string/level_up_icon"
                android:src="@drawable/ic_level_up" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/secondary_title"
                android:textAlignment="center"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/countdown_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="32sp"
            android:background="@drawable/rounded_view"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/countdown_text"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textScaleX="1.2"
            android:textSize="64sp" />

        <Button
            android:id="@+id/start_countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32sp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/poppins_bold"
            android:paddingVertical="16sp"
            android:text="@string/start_button_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:backgroundTint="@color/bg_button" />

        <Button
            android:id="@+id/cancel_countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32sp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/poppins_bold"
            android:paddingVertical="16sp"
            android:text="@string/cancel_button_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="gone"
            app:backgroundTint="@color/red" />
    </LinearLayout>
</ScrollView>