<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    android:orientation="vertical"
    android:paddingHorizontal="32sp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/ola"
        android:layout_width="wrap_content"
        android:layout_height="42sp"
        android:layout_marginTop="16sp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome"
        android:textColor="@color/text_primary"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/username"
        android:textColor="@color/text_primary"
        android:textSize="36sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <TextView
        android:id="@+id/current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="@font/poppins"
        android:text="@string/current_date"
        android:textColor="@color/text_light"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="164sp"
            android:layout_weight="1"

            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/primary"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_marginTop="16sp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/seu_nivel"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/current_user_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="72sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="164sp"
            android:layout_marginStart="20sp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/light_gray"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_marginTop="16sp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/challenges"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/current_user_completed_challenges"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:fontFamily="@font/poppins_bold"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="72sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="164sp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/black"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_marginTop="16sp"
                android:fontFamily="@font/poppins_bold"
                android:text="Próximo nível"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_next_level"
                    android:layout_width="0sp"
                    android:layout_height="80sp"
                    android:layout_weight="2"
                    android:fontFamily="@font/poppins_bold"
                    android:text="0"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="72sp" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="%"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="164sp"
            android:layout_marginLeft="16sp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_marginTop="16sp"
                android:fontFamily="@font/poppins_bold"
                android:text="Experiência"
                android:textAlignment="center"
                android:textColor="@color/text_primary"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/current_experience"
                    android:layout_width="0sp"
                    android:layout_height="80sp"
                    android:layout_weight="2"
                    android:fontFamily="@font/poppins_bold"
                    android:text="0"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text_primary"
                    android:textSize="72sp" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="pontos"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_primary"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>